--- a/index.html
+++ b/index.html
@@ -724,21 +724,21 @@
                 <a href="#" class="btn">Подробнее</a>
             </div>
         </div>
-        <div class="slide" style="background-image: url('d47c73fc-8faf-4334-befd-5a701fc4e3c6.jpg');">
+        <div class="slide" style="background-image: url(https://sun9-60.userapi.com/OjmWL5HWCAXCmGAbLMPvOomTLcruZhcmmtgaQQ/-0vU50gwxsw.jpg);">
             <div class="slide-content">
                 <h2>Косметика для тела и волос</h2>
                 <p>Натуральная косметика без химических добавок. Бережный уход за кожей и волосами.</p>
                 <a href="#" class="btn">Смотреть каталог</a>
             </div>
         </div>
-        <div class="slide" style="background-image: url('/api/placeholder/1200/600');">
+        <div class="slide" style="background-image: url(https://sun9-22.userapi.com/46SnbYXyhHVxjHe6U_WFCznROYUFhKzLVvtbrw/IMKlCZLlPII.jpg);">
             <div class="slide-content">
                 <h2>Скидки до 30%</h2>
                 <p>Специальные предложения на весь ассортимент экологичных средств для дома.</p>
                 <a href="#" class="btn">Купить сейчас</a>
             </div>
         </div>
-        <div class="slide" style="background-image: url('/api/placeholder/1200/600');">
+        <div class="slide" style="background-image: url('https://sun9-71.userapi.com/h5szWTYk09xv1ebvSfFNVMF-r_4BIzPngLLoSQ/VjS2CYjfMyM.jpg');">
             <div class="slide-content">
                 <h2>Органические шампуни</h2>
                 <p>Безсульфатные шампуни с натуральными компонентами для всех типов волос.</p>
@@ -806,7 +806,7 @@
                         <img src="4b26a817-2190-4513-9c2c-cf70c0af8252.jpg" alt="гель для посуды">
                     </div>
                     <div class="product-info">
-                        <div class="product-category">Шампуни</div>
+                        <div class="product-category">гель для посуды</div>
                         <h3 class="product-title">гель для посуды "YUNITTO"</h3>
                         <div class="product-price">
                             <span>1200 ₸</span>
@@ -867,7 +867,7 @@
                         <img src="6fac9fce-dbab-492f-874a-3a866c841022.jpg" alt="прокладки юнитто">
                     </div>
                     <div class="product-info">
-                        <div class="product-category">Для уборки</div>
+                        <div class="product-category">прокладки</div>
                         <h3 class="product-title">гигиеические женские прокладки "прокладки юнитто"</h3>
                         <div class="product-price">
                             <span>600 ₸</span>
@@ -897,7 +897,7 @@
                         <img src="d5d82fc1-0915-4ef3-af4f-fe7c8eba5cf4.jpg" alt="Бальзам для волос">
                     </div>
                     <div class="product-info">
-                        <div class="product-category">Шампуни и бальзамы</div>
+                        <div class="product-category">капсула для стирки</div>
                         <h3 class="product-title">капсула для стирки "BAFURI"</h3>
                         <div class="product-price">
                             <span>1800 ₸</span>
@@ -932,7 +932,7 @@
                         <img src="4f7f4180-fbb8-47d0-b6f6-1deeaa1a8d02.jpg" alt="Средство для стирки">
                     </div>
                     <div class="product-info">
-                        <div class="product-category">Для стирки</div>
+                        <div class="product-category">уничтожают бактерии</div>
                         <h3 class="product-title">чтобы уничтожить бактерии "MAXILIN"</h3>
                         <div class="product-price">
                             <span class="old-price"></span>
@@ -974,7 +974,7 @@
 <section class="before-after-section">
     <div class="container">
         <div class="section-title animate-fadeIn">
-            <h2>Результаты использования</h2>
+            <h2>Результаты использования максилина</h2>
         </div>
 
         <div class="before-after-container">
@@ -986,10 +986,10 @@
                 <div class="before-after-content">
                     <h3>До использования нашей продукции</h3>
                     <ul>
-                        <li><i class="fas fa-times"></i> Сложные пятна и загрязнения</li>
-                        <li><i class="fas fa-times"></i> Токсичные химические вещества</li>
-                        <li><i class="fas fa-times"></i> Раздражение кожи и аллергические реакции</li>
-                        <li><i class="fas fa-times"></i> Вред для окружающей среды</li>
+                        <li><i class="fas fa-times"></i> Частые проблемы с пищеварением (вздутие, тяжесть, запоры)</li>
+                        <li><i class="fas fa-times"></i> Нарушенный баланс микрофлоры после приёма антибиотиков.</li>
+                        <li><i class="fas fa-times"></i> Пониженный иммунитет и общая слабость.</li>
+                        <li><i class="fas fa-times"></i>Усталость, плохой сон и нехватка энергии</li>
                     </ul>
                 </div>
             </div>
@@ -1002,10 +1002,10 @@
                 <div class="before-after-content">
                     <h3>После использования нашей продукции</h3>
                     <ul>
-                        <li><i class="fas fa-check"></i> Чистота и свежесть без усилий</li>
-                        <li><i class="fas fa-check"></i> 100% натуральные компоненты</li>
-                        <li><i class="fas fa-check"></i> Безопасно для всей семьи</li>
-                        <li><i class="fas fa-check"></i> Экологичность и биоразлагаемость</li>
+                        <li><i class="fas fa-check"></i>Восстановление здоровой микрофлоры кишечника </li>
+                        <li><i class="fas fa-check"></i>Улучшение пищеварения и нормализация стула </li>
+                        <li><i class="fas fa-check"></i>Повышение иммунитета и общего самочувствия </li>
+                        <li><i class="fas fa-check"></i>Больше энергии, улучшение сна и настроения </li>
                     </ul>
                 </div>
             </div>
@@ -1195,34 +1195,17 @@ document.addEventListener('DOMContentLoaded', function() {
     <footer>
         <div class="container">
             <div class="footer-top">
-                <div class="footer-widget">
-                    <h3>О компании</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">О нас</a></li>
-                        <li><a href="#">Наша миссия</a></li>
-                        <li><a href="#">Наши ценности</a></li>
-                        <li><a href="#">Блог</a></li>
-                        <li><a href="#">Вакансии</a></li>
-                    </ul>
-                </div>
 
-                <div class="footer-widget">
-                    <h3>Информация</h3>
-                    <ul class="footer-links">
-                        <li><a href="#">Доставка и оплата</a></li>
-                        <li><a href="#">Возврат товара</a></li>
-                        <li><a href="#">Политика конфиденциальности</a></li>
-                        <li><a href="#">Вопросы и ответы</a></li>
-                    </ul>
-                </div>
+
+
 
                 <div class="footer-widget">
                     <h3>Категории</h3>
                     <ul class="footer-links">
                         <li><a href="#">Средства для мытья посуды</a></li>
-                        <li><a href="#">Шампуни и бальзамы</a></li>
-                        <li><a href="#">Средства для уборки</a></li>
-                        <li><a href="#">Уход за телом</a></li>
+                        <li><a href="#">Шампуни</a></li>
+                        <li><a href="#">капсула для стирки</a></li>
+                        <li><a href="#">прокладки</a></li>
                         <li><a href="#">Все категории</a></li>
                     </ul>
                 </div>
@@ -1230,15 +1213,13 @@ document.addEventListener('DOMContentLoaded', function() {
                 <div class="footer-widget">
                     <h3>Контакты</h3>
                     <ul class="footer-contact">
-                        <li><i class="fas fa-map-marker-alt"></i> г. Алматы, ул. Абая, 123</li>
-                        <li><i class="fas fa-phone"></i> +7 (777) 123-45-67</li>
-                        <li><i class="fab fa-whatsapp"></i> +7 (777) 123-45-67</li>
-                        <li><i class="fas fa-envelope"></i> info@ecodom.kz</li>
+                        <li><i class="fas fa-map-marker-alt"></i> г. Атырау</li>
+                        <li><i class="fas fa-phone"></i> +7 (778) 788-15-84</li>
+                        <li><i class="fab fa-whatsapp"></i> +7 (778) 788-15-84</li>
+
                     </ul>
                     <div class="footer-social">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-telegram"></i></a>
+
                         <a href="#"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
